# test-project

./: README.md  docker-compose.yml
backend/: .env  .gitignore  Dockerfile  mypy.ini  pyproject.toml  pytest.ini
backend/scripts/: entrypoint.sh  initial_data_db.sh
backend/src/apps/cfs/: apps.py  models.py  urls.py
backend/src/apps/cfs/api/: pagination.py  serializers.py  views.py
backend/src/apps/cfs/migrations/: 0001_initial.py  0002_initial.py  0003_cfs_date_alter_cfs_created_at.py  0004_alter_cfs_comment.py  0005_remove_cfs_user.py
backend/src/apps/cfs/tests/: test_api.py  test_models.py
backend/src/apps/dictionary/: admin.py  models.py  urls.py
backend/src/apps/dictionary/api/: serializers.py  viewsets.py
backend/src/apps/dictionary/migrations/: 0001_initial.py  0002_alter_cfscategory_created_at_alter_cfscategory_name_and_more.py  0003_alter_cfscategory_cfs_type_and_more.py
backend/src/apps/dictionary/tests/: test_api.py  test_models.py
backend/src/core/: models.py  settings.py  urls.py
backend/src/core/conf/: api.py  auth.py  db.py  http.py  i18n.py  installed_apps.py  logs.py  misc.py  static.py  timezone.py
backend/src/core/management/commands/: startapp.py
frontend/: .dockerignore  Dockerfile  components.json  index.html  package.json
frontend/src/app/: app.tsx  router.tsx
frontend/src/pages/cfs/api/: cfs-api.ts
frontend/src/pages/cfs/models/: useCFS.ts
frontend/src/pages/cfs/ui/: cfs-page.tsx
frontend/src/pages/dictionaries/api/: dict-api.ts
frontend/src/shared/ui/: calendar.tsx  sidebar.tsx  theme-toggle.tsx
(+8 files in other folders)
